--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Changer</title>
+    <title>Simple Adder</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Click the Button to Change Background Color!</h1>
-    <button id="colorButton">Change Color</button>
+    <h1>Simple Addition Calculator</h1>
+
+    <input type="number" id="num1" placeholder="Enter first number">
+    <input type="number" id="num2" placeholder="Enter second number">
+    <button id="addButton">Add</button>
+
+    <h2 id="result">Result: </h2>
 
     <script src="script.js"></script>
 </body>
